@@ -15,6 +15,7 @@ v1.0 - Future
 	+ Changes: Behaviour of slideshow mode modified
 	+ Changes: Open in fullscreen only if there are images passed to mirage
 	+ Features: Can now browse between subfolders
+	+ Features: Double-click to enter leave fullscreen
 
 v0.9.5.2 - February 13, 2011
 	+ Added ukrainian translation
